<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.njfarrell.android.sincerely.login.LoginViewModel"/>
        <variable
            name="handler"
            type="com.njfarrell.android.sincerely.login.LoginHandler"/>
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="88dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <ImageView
                android:src="@drawable/logo"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/logo"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/email_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_field"
                    android:text="@{viewModel.email}"
                    android:fontFamily="sans-serif" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password_field"
                    android:text="@{viewModel.password}"
                    android:fontFamily="sans-serif"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                style="@style/LoginButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/login_button"
                android:enabled="@{viewModel.isValidLogin}"
                android:onClick="@{handler.onLoginClicked}"/>

            <TextView android:id="@+id/link_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/create_account_text"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"/>

        </LinearLayout>

    </ScrollView>
</layout>